# dart-bridge

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  pyproject.toml  setup.py
.ci/: common.sh
.github/workflows/: ci.yml  release.yml
apple/: build_xcframework.sh
src/: dart_bridge.c  dart_bridge.pyx  dart_stub.c  serious_python_run.c
src/dart_api/: dart_api_stub.h
